# python-rftoy

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pyproject.toml  requirements-dev.txt  requirements.txt  rftoy.ipynb  rftoy.py
projtools/: poetry-requirements-check
tests/: test_rftoy.py
