[tool.poetry]
name = "rftoy"
version = "0.1.0"
description = "Interface for the RFToy 433Mhz controller"
authors = ["C. R. Oldham <cro@ncbt.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"
pytest-httpx = "^0.21.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
jupyter = "^1.0.0"
pytest-asyncio = "^0.20.1"
pylint = "^2.15.5"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
